Update dependencies, copyright and cleanup tests (#200)
* Update dependencies

Signed-off-by: Giovanni Lovato <giovanni@vaadin.com>

* Update copyright header

* Cleanup tests

* Update copyright header

* Update another copyright header

---------

Signed-off-by: Giovanni Lovato <giovanni@vaadin.com>